# id-python

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: quickstart.py  register_agent.py
src/wordmade_id/: __init__.py  async_client.py  client.py  constants.py  errors.py  types.py
tests/: conftest.py  test_async_client.py  test_client.py
