[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wordmade-id"
dynamic = ["version"]
description = "Python SDK for the Wordmade ID agent identity API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "wordmade", email = "identity@wordmade.world" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[project.urls]
Homepage = "https://id.wordmade.world"
Documentation = "https://id.wordmade.world/docs"
Repository = "https://github.com/wordmade/id-python"

[tool.hatch.version]
path = "src/wordmade_id/_version.py"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
